Create Models, and viewModels

--- a/.editorconfig
+++ b/.editorconfig
@@ -243,3 +243,6 @@ dotnet_naming_style.begins_with__.required_prefix = _
 dotnet_naming_style.begins_with__.required_suffix = 
 dotnet_naming_style.begins_with__.word_separator = 
 dotnet_naming_style.begins_with__.capitalization = camel_case
+
+# CS8604: Possible null reference argument.
+dotnet_diagnostic.CS8604.severity = none
