--- a/.editorconfig
+++ b/.editorconfig
@@ -246,3 +246,9 @@ dotnet_naming_style.begins_with__.capitalization = camel_case
 
 # CS8604: Possible null reference argument.
 dotnet_diagnostic.CS8604.severity = none
+
+# CS8602: Dereference of a possibly null reference.
+dotnet_diagnostic.CS8602.severity = none
+
+# CS8603: Possible null reference return.
+dotnet_diagnostic.CS8603.severity = none
