Completed Worktype and Storagelocation import

--- a/Modelbouwer/Modelbouwer.csproj
+++ b/Modelbouwer/Modelbouwer.csproj
@@ -6,8 +6,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-    <AssemblyVersion>24.8.23.0</AssemblyVersion>
-    <FileVersion>24.8.23.0</FileVersion>
+    <AssemblyVersion>24.8.23.17</AssemblyVersion>
+    <FileVersion>24.8.23.17</FileVersion>
     <UseWindowsForms>True</UseWindowsForms>
     <ApplicationIcon>Resources\Icons\logo.ico</ApplicationIcon>
   </PropertyGroup>
@@ -16,7 +16,7 @@
     <Optimize>True</Optimize>
   </PropertyGroup>
 
-    <ItemGroup>
+  <ItemGroup>
     <None Remove="Resources\Icons\acceptreceipt.png" />
     <None Remove="Resources\Icons\app.png" />
     <None Remove="Resources\Icons\appExit.png" />
@@ -40,16 +40,17 @@
     <None Remove="Resources\Icons\Icon1.ico" />
     <None Remove="Resources\Icons\logo.ico" />
     <None Remove="Resources\Icons\metadata.png" />
+    <None Remove="Resources\Icons\metadataCategory.png" />
+    <None Remove="Resources\Icons\metadataCategoryExport.png" />
+    <None Remove="Resources\Icons\metadataCategoryImport.png" />
+    <None Remove="Resources\Icons\metadataCategoryReport.png" />
+    <None Remove="Resources\Icons\metadataContact %282%29.png" />
     <None Remove="Resources\Icons\metadataCountry.png" />
     <None Remove="Resources\Icons\metadataCountryExport.png" />
     <None Remove="Resources\Icons\metadataCountryImport.png" />
     <None Remove="Resources\Icons\metadataCountryReport.png" />
     <None Remove="Resources\Icons\metadataContact.png" />
     <None Remove="Resources\Icons\metadataContactType.png" />
-    <None Remove="Resources\Icons\metadataCountry.png" />
-    <None Remove="Resources\Icons\metadataCountryExport.png" />
-    <None Remove="Resources\Icons\metadataCountryImport.png" />
-    <None Remove="Resources\Icons\metadataCountryReport.png" />
     <None Remove="Resources\Icons\metadataCurencyReport.png" />
     <None Remove="Resources\Icons\metadataCurrency.png" />
     <None Remove="Resources\Icons\metadataCurrencyExport.png" />
@@ -88,6 +89,7 @@
     <None Remove="Resources\Icons\projectReport.png" />
     <None Remove="Resources\Icons\projectTime.png" />
     <None Remove="Resources\Icons\recalculate.png" />
+    <None Remove="Resources\Icons\Role.png" />
     <None Remove="Resources\Icons\rtftoolbarAlignCenter.png" />
     <None Remove="Resources\Icons\rtftoolbarAlignLeft.png" />
     <None Remove="Resources\Icons\rtftoolbarAlignRight.png" />
@@ -147,10 +149,7 @@
 
   <ItemGroup>
     <Page Remove="Resources\Icons\Icons.xaml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="Resources\Icons\logo.ico" />
+    <Page Remove="Resources\Icons\TimeIcons.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -228,11 +227,28 @@
     <Resource Include="Resources\Icons\Icon1.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Resources\Icons\Icons.xaml" />
+    <Resource Include="Resources\Icons\Icons.xaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\Icons\logo.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Icons\metadata.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Icons\metadataCategory.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Icons\metadataCategoryExport.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Icons\metadataCategoryImport.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Icons\metadataCategoryReport.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Icons\metadataContact (2).png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Icons\metadataCountry.png">
@@ -251,18 +267,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Icons\metadataContactType.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Icons\metadataCountry.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Icons\metadataCountryExport.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Icons\metadataCountryImport.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Icons\metadataCountryReport.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Icons\metadataCurrency.png">
@@ -379,6 +383,9 @@
     <Resource Include="Resources\Icons\recalculate.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\Icons\Role.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\Icons\rtftoolbarAlignCenter.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
@@ -484,6 +491,7 @@
     <Resource Include="Resources\Icons\timeExport.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\Icons\TimeIcons.xaml" />
     <Resource Include="Resources\Icons\timeImport.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
@@ -546,7 +554,7 @@
     </Resource>
   </ItemGroup>
 
-  
+
 
   <ItemGroup>
     <Compile Update="Resources\Languages\Language.Designer.cs">
