--- a/Modelbouwer/Modelbouwer.csproj
+++ b/Modelbouwer/Modelbouwer.csproj
@@ -6,8 +6,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-    <AssemblyVersion>24.8.30.20</AssemblyVersion>
-    <FileVersion>24.8.30.20</FileVersion>
+    <AssemblyVersion>24.9.5.16</AssemblyVersion>
+    <FileVersion>24.9.5.16</FileVersion>
     <UseWindowsForms>True</UseWindowsForms>
     <ApplicationIcon>Resources\Icons\logo.ico</ApplicationIcon>
   </PropertyGroup>
@@ -159,6 +159,9 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.0" />
     <PackageReference Include="MySql.Data" Version="9.0.0" />
+    <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="26.2.11" />
+    <PackageReference Include="Syncfusion.SfGrid.WPF" Version="26.2.11" />
+    <PackageReference Include="Syncfusion.SfTreeView.WPF" Version="26.2.11" />
     <PackageReference Include="Syncfusion.Tools.WPF" Version="26.2.11" />
   </ItemGroup>
 
