--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -47,19 +47,16 @@ on:
 jobs:
 
   build:
-
+    
     strategy:
       matrix:
-        configuration: [Debug, Release]
-
+        configuration: [Debug]
+        
     runs-on: windows-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
       Solution_Name: Modelbouwer.sln
-      #Test_Project_Path:                                        # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
-      #Wap_Project_Directory: your-wap-project-directory-name    # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
-      #Wap_Project_Path: your-wap-project-path                   # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
 
     steps:
     - name: Checkout
@@ -119,4 +116,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: BuildOutput
-        path: bin/debug/net8.0-windows/  # Bijvoorbeeld: bin/Release
+        path: bin/debug/net8.0-windows7.0/  # Bijvoorbeeld: bin/Release
