--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -90,11 +90,11 @@ jobs:
 
     # List files to check if the build output exists
     - name: List files
-      run: dir bin/Debug/net8.0-windows/
+      run: dir bin/Debug/net8.0-windows7.0/
       
     # Upload the artifactes
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
         name: BuildOutput
-        path: bin/debug/net8.0-windows/  # Bijvoorbeeld: bin/Release
+        path: bin/debug/net8.0-windows7.0/  # Bijvoorbeeld: bin/Release
