--- a/Modelbouwer/Modelbouwer.csproj
+++ b/Modelbouwer/Modelbouwer.csproj
@@ -6,8 +6,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-    <AssemblyVersion>24.11.19.4</AssemblyVersion>
-    <FileVersion>24.11.19.4</FileVersion>
+    <AssemblyVersion>24.11.21.15</AssemblyVersion>
+    <FileVersion>24.11.21.15</FileVersion>
     <UseWindowsForms>True</UseWindowsForms>
     <ApplicationIcon>Resources\Icons\logo.ico</ApplicationIcon>
   </PropertyGroup>
@@ -159,14 +159,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0-preview1" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0-preview2" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     <PackageReference Include="MySql.Data" Version="9.1.0" />
-    <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="27.1.58" />
-    <PackageReference Include="Syncfusion.SfGrid.WPF" Version="27.1.58" />
-    <PackageReference Include="Syncfusion.SfTreeView.WPF" Version="27.1.58" />
-    <PackageReference Include="Syncfusion.Tools.WPF" Version="27.1.58" />
-    <PackageReference Include="System.Text.Json" Version="9.0.0-rc.2.24473.5" />
+    <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="27.2.2" />
+    <PackageReference Include="Syncfusion.SfGrid.WPF" Version="27.2.2" />
+    <PackageReference Include="Syncfusion.SfTreeView.WPF" Version="27.2.2" />
+    <PackageReference Include="Syncfusion.Shared.WPF" Version="27.2.2" />
+    <PackageReference Include="Syncfusion.Tools.WPF" Version="27.2.2" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
