--- a/.editorconfig
+++ b/.editorconfig
@@ -252,3 +252,6 @@ dotnet_diagnostic.CS8602.severity = none
 
 # CS8603: Possible null reference return.
 dotnet_diagnostic.CS8603.severity = none
+
+# Default severity for analyzer diagnostics with category 'DocumentationHeader'
+dotnet_analyzer_diagnostic.category-DocumentationHeader.severity = none
